update notebook and app script

--- a/valve_condition_prediction.ipynb
+++ b/valve_condition_prediction.ipynb
@@ -1266,7 +1266,7 @@
    "id": "b905374f",
    "metadata": {},
    "source": [
-    "To reduce the number of features and since a cycle is about 60 seconds, I decide to keep only 60 values for each feature. From the plots, I can see that this method does not change the behaviour of the time series."
+    "To reduce the number of features and since a cycle is about 60 seconds, I decide to keep only 60 values for each feature. From the plots, I can see that this method does not change the global distribution of the time series."
    ]
   },
   {
@@ -1953,7 +1953,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prediction time : 3.29 min\n"
+      "prediction time : 2.85 min\n"
      ]
     }
    ],
@@ -2054,28 +2054,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "463c78cd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prediction time : 3.44 min\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test if saved model works fine \n",
     "clf = KNeighborsTimeSeriesClassifier.from_pickle(save_path)\n",
@@ -2102,7 +2084,7 @@
    "id": "501e89c2",
    "metadata": {},
    "source": [
-    "After trying different models to classify the time series representing the functioning condition of valve, I chose to present this model because of the trade-off between simplicity / accuracy.<br> The model works <b>perfectly</b>, at least on the test dataset, when it comes to predict if the utilization of the valve is <b>close to total failure</b>.<br> It seems that it is harder for the model to separate the two classes <b>optimal switching behavior</b> and <b>small lag</b>. <br><br> For future works, I should investigate why the model is so good on the class <b>close to total failure</b> and explore the use of feature engineering combined with ensemble of trees."
+    "After trying different models to classify the time series representing the functioning condition of valve, I chose to present this model because of the trade-off between simplicity / accuracy.<br> The model works <b>perfectly</b>, at least on the test dataset, when it comes to predict if the utilization of the valve is <b>close to total failure</b>.<br> It seems that it is harder for the model to separate the two classes <b>optimal switching behavior</b> and <b>small lag</b>. <br><br> For future works, I will explore the use of feature engineering combined with ensemble of trees."
    ]
   },
   {
